--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
     display: grid;
     grid-template-columns: repeat(30, 1fr);
     grid-template-rows: repeat(30, 1fr);
+    height: 400px;
+    width: 400px;
 }
 
 .box {
