--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 .body {
     margin: 0px;
     height: 100%;
+    width: 100%;
 }
 
 .header {
     background-color: darkred;
     padding: 24px;
+    font-size: 36px;
+    color: wheat;
+    text-align: center;
+    font-weight: 800;
+}
+
+.options {
+    display: flex;
+    justify-content: space-around;
+    padding:26px ;
+    background-color: red;
 }
 .sketchContainer{
     display: flex;
@@ -19,18 +31,52 @@
     border-style: ridge;
     border-width: 32px;
     border-radius: 32px;
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    width: 600px;
     display: flex;
 }
 .sketchGrid {
     display: grid;
     grid-template-columns: repeat(30, 1fr);
     grid-template-rows: repeat(30, 1fr);
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    width: 600px;
 }
 
 .box {
     flex: 1;
+}
+
+.footer {
+    text-align: center;
+    background-color: darkred;
+    color: white;
+    padding:24px;
+    font-size: 32px;
+    font-weight: 600;
+}
+
+#newSize{
+    border: none;
+    background-color: bisque;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.25);
+    font-size: 16px;
+    padding: 14px;
+}
+
+#randomColor {
+    border: none;
+    background-color: bisque;
+    font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.25);
+    transition-duration:.7s ;
+    padding: 14px;
+}
+
+#blackColor {
+    border: none;
+    background-color: bisque;
+    font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.25);
+    padding: 14px;
 }
